# fw_formation

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/hust_fw_formation_control/: FWcmd.h  FWstates.h  Formation_control_states.h  Fw_cmd_mode.h  Fw_current_mode.h  Fwmonitor.h  Leaderstates.h
devel/lib/hust_fw_formation_control/: follower1_main  follower2_main  leader_main  pack_fw1_states  pack_fw2_states  pack_leader_states  switch_fw1_mode
devel/lib/pkgconfig/: hust_fw_formation_control.pc
devel/lib/python2.7/dist-packages/hust_fw_formation_control/msg/: _FWcmd.py  _FWstates.py  _Formation_control_states.py  _Fw_cmd_mode.py  _Fw_current_mode.py  _Fwmonitor.py  _Leaderstates.py  __init__.py
devel/share/common-lisp/ros/hust_fw_formation_control/msg/: FWcmd.lisp  FWstates.lisp  Formation_control_states.lisp  Fw_cmd_mode.lisp  Fw_current_mode.lisp  Fwmonitor.lisp  Leaderstates.lisp  _package.lisp  _package_FWcmd.lisp  _package_FWstates.lisp  _package_Formation_control_states.lisp  _package_Fw_cmd_mode.lisp  _package_Fw_current_mode.lisp  _package_Fwmonitor.lisp  _package_Leaderstates.lisp  hust_fw_formation_control-msg.asd
devel/share/gennodejs/ros/hust_fw_formation_control/msg/: FWcmd.js  FWstates.js  Formation_control_states.js  Fw_cmd_mode.js  Fw_current_mode.js  Fwmonitor.js  Leaderstates.js  _index.js
devel/share/hust_fw_formation_control/cmake/: hust_fw_formation_control-msg-paths.cmake  hust_fw_formation_controlConfig.cmake
devel/share/roseus/ros/hust_fw_formation_control/: manifest.l
devel/share/roseus/ros/hust_fw_formation_control/msg/: FWcmd.l  FWstates.l  Formation_control_states.l  Fw_cmd_mode.l  Fw_current_mode.l  Fwmonitor.l  Leaderstates.l
src/hust_fw_formation_control/: CMakeLists.txt  package.xml
src/hust_fw_formation_control/msg/: FWcmd.msg  FWstates.msg  Formation_control_states.msg  Fw_cmd_mode.msg  Fw_current_mode.msg
src/hust_fw_formation_control/scripts/: multi_fw_sim.sh  single_fw_sim.sh
src/hust_fw_formation_control/src/fixed_wing_lib/: PID.hpp  filter.hpp  increment_pid_controller.hpp  mathlib.hpp  my_controller.hpp  pid_controller.hpp  syslib.hpp
src/hust_fw_formation_control/src/formation_controller/: abs_formation_controller.cpp  abs_formation_controller.hpp  formation_controller.cpp  formation_controller.hpp
src/hust_fw_formation_control/src/multi_fw_node/followers_main/: follower1_main.cpp  follower2_main.cpp
src/hust_fw_formation_control/src/multi_fw_node/leader_main/: leader_main.cpp
src/hust_fw_formation_control/src/multi_fw_node/pack_fws_states/: pack_fw1_states.cpp  pack_fw2_states.cpp  pack_leader_states.cpp
src/hust_fw_formation_control/src/multi_fw_node/switch_fws_mode/: switch_fw1_mode.cpp
src/hust_fw_formation_control/src/pack_fw_states/: fixed_wing_sub_pub.hpp  pack_fw_states.cpp  pack_fw_states.h
src/hust_fw_formation_control/src/task_main/: task_main.cpp  task_main.h
src/hust_fw_formation_control/src/test/switch_fw_mode/: switch_fw_mode.cpp  switch_fw_mode.h
src/hust_fw_formation_control/src/test/vir_leader/: vir_sim_leader.cpp  vir_sim_leader.h
